--- a/index.html
+++ b/index.html
@@ -25,30 +25,65 @@
 
 <body>
   <main>
-    10,000+ of our users love our products.
-
-    We only provide great products combined with excellent customer service.
-    See what our satisfied customers are saying about our services.
-
-    Rated 5 Stars in Reviews
-    Rated 5 Stars in Report Guru
-    Rated 5 Stars in BestTech
-
-    Colton Smith
-    Verified Buyer
-    "We needed the same printed design as the one we had ordered a week prior.
-    Not only did they find the original order, but we also received it in time.
-    Excellent!"
-
-    Irene Roberts
-    Verified Buyer
-    "Customer service is always excellent and very quick turn around. Completely
-    delighted with the simplicity of the purchase and the speed of delivery."
-
-    Anne Wallace
-    Verified Buyer
-    "Put an order with this company and can only praise them for the very high
-    standard. Will definitely use them again and recommend them to everyone!"
+    <h1>10,000+ of our users love our products.</h1>
+    <p class="introduction">
+      We only provide great products combined with excellent customer service.
+      See what our satisfied customers are saying about our services.
+    </p>
+    <!-- **** RATINGS LIST **** -->
+    <ul class="ratings-list">
+      <!-- **** Rating Item **** -->
+      <li class="rating-item">
+        Rated 5 Stars in Reviews
+      </li>
+      <!-- **** Rating Item **** -->
+      <li class="rating-item">
+        Rated 5 Stars in Report Guru
+      </li>
+      <!-- **** Rating Item **** -->
+      <li class="rating-item">
+        Rated 5 Stars in BestTech
+      </li>
+    </ul>
+    <!-- **** REVIEWS LIST **** -->
+    <ul class="reviews-list">
+      <!-- **** Review Item **** -->
+      <li class="review-item">
+        <p class="reviewer-name">
+          Colton Smith
+        </p>
+        <p class="reviewer-role">
+          Verified Buyer
+        </p>
+        <p class="reviewer-comment">
+          "We needed the same printed design as the one we had ordered a week prior.
+          Not only did they find the original order, but we also received it in time.
+          Excellent!"
+        </p>
+      </li>
+      <!-- **** Review Item **** -->
+      <li class="review-item">
+        <p class="reviewer-name">
+          Irene Roberts</p>
+        <p class="reviewer-role">
+          Verified Buyer</p>
+        <p class="reviewer-comment">
+          "Customer service is always excellent and very quick turn around. Completely
+          delighted with the simplicity of the purchase and the speed of delivery."
+        </p>
+      </li>
+      <!-- **** Review Item **** -->
+      <li class="review-item">
+        <p class="reviewer-name">
+          Anne Wallace</p>
+        <p class="reviewer-role">
+          Verified Buyer</p>
+        <p class="reviewer-comment">
+          "Put an order with this company and can only praise them for the very high
+          standard. Will definitely use them again and recommend them to everyone!"
+        </p>
+      </li>
+    </ul>
   </main>
   <footer class="attribution">
     Challenge by
