--- a/index.html
+++ b/index.html
@@ -25,70 +25,76 @@
 
 <body>
   <main>
-    <h1>10,000+ of our users love our products.</h1>
-    <p class="introduction">
-      We only provide great products combined with excellent customer service.
-      See what our satisfied customers are saying about our services.
-    </p>
-    <!-- **** RATINGS LIST **** -->
-    <ul class="ratings-list">
-      <!-- **** Rating Item **** -->
-      <li class="rating-item">
-        Rated 5 Stars in Reviews
-      </li>
-      <!-- **** Rating Item **** -->
-      <li class="rating-item">
-        Rated 5 Stars in Report Guru
-      </li>
-      <!-- **** Rating Item **** -->
-      <li class="rating-item">
-        Rated 5 Stars in BestTech
-      </li>
-    </ul>
-    <!-- **** REVIEWS LIST **** -->
-    <ul class="reviews-list">
-      <!-- **** Review Item **** -->
-      <li class="review-item">
-        <p class="reviewer-name">
-          Colton Smith
-        </p>
-        <p class="reviewer-role">
-          Verified Buyer
-        </p>
-        <p class="reviewer-comment">
-          "We needed the same printed design as the one we had ordered a week prior.
-          Not only did they find the original order, but we also received it in time.
-          Excellent!"
-        </p>
-      </li>
-      <!-- **** Review Item **** -->
-      <li class="review-item">
-        <p class="reviewer-name">
-          Irene Roberts</p>
-        <p class="reviewer-role">
-          Verified Buyer</p>
-        <p class="reviewer-comment">
-          "Customer service is always excellent and very quick turn around. Completely
-          delighted with the simplicity of the purchase and the speed of delivery."
-        </p>
-      </li>
-      <!-- **** Review Item **** -->
-      <li class="review-item">
-        <p class="reviewer-name">
-          Anne Wallace</p>
-        <p class="reviewer-role">
-          Verified Buyer</p>
-        <p class="reviewer-comment">
-          "Put an order with this company and can only praise them for the very high
-          standard. Will definitely use them again and recommend them to everyone!"
-        </p>
-      </li>
-    </ul>
+    <section>
+      <h1>10,000+ of our users love our products.</h1>
+      <p class="introduction">
+        We only provide great products combined with excellent customer service.
+        See what our satisfied customers are saying about our services.
+      </p>
+    </section>
+    <section class="ratings-section">
+      <!-- **** RATINGS LIST **** -->
+      <ul class="ratings-list">
+        <!-- **** Rating Item **** -->
+        <li class="rating-item">
+          Rated 5 Stars in Reviews
+        </li>
+        <!-- **** Rating Item **** -->
+        <li class="rating-item">
+          Rated 5 Stars in Report Guru
+        </li>
+        <!-- **** Rating Item **** -->
+        <li class="rating-item">
+          Rated 5 Stars in BestTech
+        </li>
+      </ul>
+    </section>
+    <section class="reviews-section">
+      <!-- **** REVIEWS LIST **** -->
+      <ul class="reviews-list">
+        <!-- **** Review Item **** -->
+        <li class="review-item">
+          <p class="reviewer-name">
+            Colton Smith
+          </p>
+          <p class="reviewer-role">
+            Verified Buyer
+          </p>
+          <p class="reviewer-comment">
+            "We needed the same printed design as the one we had ordered a week prior.
+            Not only did they find the original order, but we also received it in time.
+            Excellent!"
+          </p>
+        </li>
+        <!-- **** Review Item **** -->
+        <li class="review-item">
+          <p class="reviewer-name">
+            Irene Roberts</p>
+          <p class="reviewer-role">
+            Verified Buyer</p>
+          <p class="reviewer-comment">
+            "Customer service is always excellent and very quick turn around. Completely
+            delighted with the simplicity of the purchase and the speed of delivery."
+          </p>
+        </li>
+        <!-- **** Review Item **** -->
+        <li class="review-item">
+          <p class="reviewer-name">
+            Anne Wallace</p>
+          <p class="reviewer-role">
+            Verified Buyer</p>
+          <p class="reviewer-comment">
+            "Put an order with this company and can only praise them for the very high
+            standard. Will definitely use them again and recommend them to everyone!"
+          </p>
+        </li>
+      </ul>
+    </section>
   </main>
-  <footer class="attribution">
+  <!-- <footer class="attribution">
     Challenge by
     <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="#">Your Name Here</a>.
-  </footer>
+  </footer> -->
 </body>
 
 </html>
