--- a/index.html
+++ b/index.html
@@ -37,14 +37,17 @@
       <ul class="ratings-list">
         <!-- **** Rating Item **** -->
         <li class="rating-item">
+          <div class="five-stars"></div>
           Rated 5 Stars in Reviews
         </li>
         <!-- **** Rating Item **** -->
         <li class="rating-item">
+          <div class="five-stars"></div>
           Rated 5 Stars in Report Guru
         </li>
         <!-- **** Rating Item **** -->
         <li class="rating-item">
+          <div class="five-stars"></div>
           Rated 5 Stars in BestTech
         </li>
       </ul>
