profile pictures added

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
       <ul class="reviews-list">
         <!-- **** Review Item **** -->
         <li class="review-item">
+          <div class="reviewer-picture" id="COLTON-SMITH"></div>
           <p class="reviewer-name">
             Colton Smith
           </p>
@@ -71,6 +72,7 @@
         </li>
         <!-- **** Review Item **** -->
         <li class="review-item">
+          <div class="reviewer-picture" id="IRENE-ROBERTS"></div>
           <p class="reviewer-name">
             Irene Roberts</p>
           <p class="reviewer-role">
@@ -82,6 +84,7 @@
         </li>
         <!-- **** Review Item **** -->
         <li class="review-item">
+          <div class="reviewer-picture" id="ANNE-WALLACE"></div>
           <p class="reviewer-name">
             Anne Wallace</p>
           <p class="reviewer-role">
