--- a/index.html
+++ b/index.html
@@ -97,10 +97,10 @@
       </ul>
     </section>
   </main>
-  <!-- <footer class="attribution">
+  <footer class="attribution">
     Challenge by
-    <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="#">Your Name Here</a>.
-  </footer> -->
+    <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="#">amarascape</a>.
+  </footer>
 </body>
 
 </html>
