--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <body>
   <main>
-    <section>
+    <section class="leading">
       <h1>10,000+ of our users love our products.</h1>
       <p class="introduction">
         We only provide great products combined with excellent customer service.
