--- a/index.html
+++ b/index.html
@@ -36,17 +36,17 @@
       <!-- **** RATINGS LIST **** -->
       <ul class="ratings-list">
         <!-- **** Rating Item **** -->
-        <li class="rating-item">
+        <li class="rating-item" id="FIRST-RATING-ITEM">
           <div class="five-stars"></div>
           Rated 5 Stars in Reviews
         </li>
         <!-- **** Rating Item **** -->
-        <li class="rating-item">
+        <li class="rating-item" id="SECOND-RATING-ITEM">
           <div class="five-stars"></div>
           Rated 5 Stars in Report Guru
         </li>
         <!-- **** Rating Item **** -->
-        <li class="rating-item">
+        <li class="rating-item" id="THIRD-RATING-ITEM">
           <div class="five-stars"></div>
           Rated 5 Stars in BestTech
         </li>
