--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <!-- **** REVIEWS LIST **** -->
       <ul class="reviews-list">
         <!-- **** Review Item **** -->
-        <li class="review-item">
+        <li class="review-item" id="FIRST-REVIEW-ITEM">
           <div class="reviewer-picture" id="COLTON-SMITH"></div>
           <p class="reviewer-name">
             Colton Smith
@@ -71,7 +71,7 @@
           </p>
         </li>
         <!-- **** Review Item **** -->
-        <li class="review-item">
+        <li class="review-item" id="SECOND-REVIEW-ITEM">
           <div class="reviewer-picture" id="IRENE-ROBERTS"></div>
           <p class="reviewer-name">
             Irene Roberts</p>
@@ -83,7 +83,7 @@
           </p>
         </li>
         <!-- **** Review Item **** -->
-        <li class="review-item">
+        <li class="review-item" id="THIRD-REVIEW-ITEM">
           <div class="reviewer-picture" id="ANNE-WALLACE"></div>
           <p class="reviewer-name">
             Anne Wallace</p>
